modified date of possible pub

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
               <dt>
                 <h4>
                   <a href="publications/Distance_methods_vs_Network_problems.pdf">
-                    On the Complexity of Degree-Constrained Network Design Problems with Nonlinear Objectives
+                    On the Complexity of Degree-Constrained Network Design Problems with Linear and Nonlinear Objectives
                   </a>
                 </h4>
               </dt>
@@ -289,9 +289,9 @@
               <dd>
                 <p>
                   Daniele Catanzaro, Gwenaël Joret, Brieuc Pierre, and <u>Francesco Pisanu</u>
-                  (<b>2025+</b>)<br />
+                  (<b>2026+</b>)<br />
                   <em>
-                    Soon submitted
+                    Submitted in December 2025
                   </em>
                   <br />
                 </p>
@@ -311,9 +311,9 @@
               <dd>
                 <p>
                   Daniele Catanzaro, Raffaele Pesenti, <u>Francesco Pisanu</u>
-                  (<b>2025+</b>)<br />
+                  (<b>2026+</b>)<br />
                   <em>
-                    Submitted on November 2025
+                    Submitted in November 2025
                   </em>
                   <br />
                 </p>
@@ -333,9 +333,9 @@
               <dd>
                 <p>
                   Emiliano Lancini, <u>Francesco Pisanu</u>
-                  (<b>2025+</b>)<br />
+                  (<b>2026+</b>)<br />
                   <em>
-                    Submitted on July 2025
+                    Submitted in July 2025
                   </em>
                   <br />
                 </p>
@@ -356,9 +356,9 @@
               <dd>
                 <p>
                   Roland Grappe, Mathieu Lacroix, <u>Francesco Pisanu</u>
-                  (<b>2025+</b>)<br />
+                  (<b>2026+</b>)<br />
                   <em>
-                    Submitted on May 2025
+                    Submitted in May 2025
                   </em>
                   <br />
                 </p>
