--- a/index.html
+++ b/index.html
@@ -163,7 +163,30 @@
               <h2 id="publications"> Selected publications</h2>
             </header>
 
-            <!-- Publication 1-->
+
+            <!-- Publication-->
+            <dl>
+              <dt>
+                <h4>
+                  <a href="https://dial.uclouvain.be/pr/boreal/object/boreal%3A295204/datastream/PDF_01/view">
+                    A horizon tour of box-total dual integrality
+                  </a>
+                </h4>
+              </dt>
+
+              <dd>
+                <p>
+                  Emiliano Lancini, <u>Francesco Pisanu</u>
+                  (<b>2026</b>)<br />
+                  <em>
+                    Accepted in February 2026, Computer Science review
+                  </em>
+                  <br />
+                </p>
+              </dd>
+            </dl>
+
+            <!-- Publication-->
             <dl>
               <dt>
                 <h4>
@@ -314,28 +337,6 @@
                   (<b>2026+</b>)<br />
                   <em>
                     Submitted in November 2025
-                  </em>
-                  <br />
-                </p>
-              </dd>
-            </dl>
-            
-            <!-- Coming soon 1-->
-            <dl>
-              <dt>
-                <h4>
-                  <a href="https://dial.uclouvain.be/pr/boreal/object/boreal%3A295204/datastream/PDF_01/view">
-                    A horizon tour of box-total dual integrality
-                  </a>
-                </h4>
-              </dt>
-
-              <dd>
-                <p>
-                  Emiliano Lancini, <u>Francesco Pisanu</u>
-                  (<b>2026+</b>)<br />
-                  <em>
-                    Submitted in July 2025
                   </em>
                   <br />
                 </p>
