minor correction of the title

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                   Emiliano Lancini, <u>Francesco Pisanu</u>
                   (<b>2026</b>)<br />
                   <em>
-                    Accepted in February 2026, Computer Science review
+                    Accepted in February 2026, Computer Science Review, Elsevier
                   </em>
                   <br />
                 </p>
