--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                   Emiliano Lancini, <u>Francesco Pisanu</u>
                   (<b>2026</b>)<br />
                   <em>
-                    Accepted in February 2026, Computer Science Review, Elsevier
+                    Computer Science Review, Volume 61, (2026, Elsevier)
                   </em>
                   <br />
                 </p>
