added links to pub

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <dl>
               <dt>
                 <h4>
-                  <a href="https://dial.uclouvain.be/pr/boreal/object/boreal%3A295204/datastream/PDF_01/view">
+                  <a href="https://www.sciencedirect.com/science/article/pii/S1574013726000377">
                     A horizon tour of box-total dual integrality
                   </a>
                 </h4>
@@ -182,6 +182,9 @@
                     Computer Science Review, Volume 61, (2026, Elsevier)
                   </em>
                   <br />
+                  <a href="https://dial.uclouvain.be/pr/boreal/object/boreal%3A295204/datastream/PDF_01/view">
+                    (preprint)
+                  </a>
                 </p>
               </dd>
             </dl>
@@ -204,6 +207,9 @@
                     Discrete Optimization, Volume 50, (Elsevier, 2023)
                   </em>
                   <br />
+                  <a href="publications/hard_box-tdi.pdf">
+                    (preprint)
+                  </a>
                 </p>
               </dd>
             </dl>
